# Alleta

./: .gitignore  Cargo.toml  Readme.md  build.rs  docker-compose.yml
prisma/: schema.prisma
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
