[package]
name = "aletta-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# RPC client
ethers = { version = "2", features = ["abigen", "ws"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (Prisma)
prisma-client-rust = { git = "https://github.com/Brendonk13/prisma-client-rust", tag = "0.6.11" }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }